[package]
name = "hexchat_translator"
version = "1.0.5"
authors = ["ttappr <tmtappr@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "translator"
crate-type = ["cdylib"]

[dependencies]
#hexchat-api = { path = "../hexchat-api" }
hexchat-api = "^0.3"
#hexchat-api = { git = "https://github.com/ttappr/hexchat-api.git" }
regex = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.0", features = ["json"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1


